--- a/task03_0606/Views/Member/Member.cshtml
+++ b/task03_0606/Views/Member/Member.cshtml
@@ -1,8 +1,11 @@
 ﻿
 @{
     string LayoutUrl = "~/Views/_Normal_Member_Home_LayoutPage1.cshtml";
-    if ((string)Session["identity"] == "superUser" || (string)Session["identity"] == "storeUser") {
+    if ((string)Session["identity"] == "storeUser") {
         LayoutUrl = "~/Views/_Member_Home_LayoutPage1.cshtml";
+    }
+    if ((string)Session["identity"] == "superUser") {
+        LayoutUrl = "~/Views/_Member_SuperUser_LayoutPage1.cshtml";
     }
     ViewBag.Title = "EditPersonalData";
     Layout = LayoutUrl;
