--- a/task03_0606/Views/Member/Member.cshtml
+++ b/task03_0606/Views/Member/Member.cshtml
@@ -96,7 +96,7 @@
                 <i class="fa fa-area-chart"></i> Area Chart Example
             </div>
             <div class="card-body">
-                <canvas id="myAreaChart" width="100%" height="30"></canvas>
+                <canvas id="myAreaChart" width="100" height="30"></canvas>
             </div>
             <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
         </div>
@@ -342,7 +342,7 @@
                         <i class="fa fa-pie-chart"></i> Pie Chart Example
                     </div>
                     <div class="card-body">
-                        <canvas id="myPieChart" width="100%" height="100"></canvas>
+                        <canvas id="myPieChart" width="100" height="100"></canvas>
                     </div>
                     <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
                 </div>
@@ -406,7 +406,7 @@
             </div>
             <div class="card-body">
                 <div class="table-responsive">
-                    <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                    <table class="table table-bordered" id="dataTable" width="100" cellspacing="0">
                         <thead>
                             <tr>
                                 <th>Name</th>
@@ -923,8 +923,8 @@
         </div>
     </div>
     <!-- Bootstrap core JavaScript-->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/vendor/jquery/jquery.min.js"></script>
+    <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- Core plugin JavaScript-->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
     <!-- Page level plugin JavaScript-->
