--- a/task03_0606/Views/Products/ManagerIndex.cshtml
+++ b/task03_0606/Views/Products/ManagerIndex.cshtml
@@ -1,153 +1,80 @@
-﻿@model IEnumerable<task03_0606.Models.newproduct>
+﻿@model IEnumerable<task03_0606.Models.Class1>
 
 @{
     ViewBag.Title = "ManagerIndex";
 }
 
+ 
+        <!--Top Table UI-->
+
+        <div class="card card-cascade narrower">
+
+            <!--Card image-->
+            <div class="view view-cascade gradient-card-header blue-gradient narrower py-2 mx-4 mb-3 d-flex justify-content-between align-items-center">
+
+
+
+                <h1><a href="" class="white-text mx-3">商品列表</a></h1>
+                <div class="pull-right" id="toolbar">
+                    <button id="create" class="btn btn-danger" disabled>
+                        <i class="glyphicon glyphicon-remove"></i>@Html.ActionLink("Create New", "Create")
+                    </button>
+                </div>
+
+            </div>
   
-
-<!--Top Table UI-->
-@*<div class="card p-2 mb-5">*@
-
-    <!--Grid row-->
-    <div class="row">
-
-        <!--Grid column-->
-        <div class="col-lg-3 col-md-12">
-
-            <!--Name-->
-            @*<select class="mdb-select colorful-select dropdown-primary mx-2">
-                <option value="" disabled selected>Bulk actions</option>
-                <option value="1">Delate</option>
-                <option value="2">Export</option>
-                <option value="3">Change segment</option>
-            </select>*@
-
-        </div>
-        <!--Grid column-->
-        <!--Grid column-->
-        @*<div class="col-lg-3 col-md-6">
-
-            <!--Blue select-->
-            <select class="mdb-select colorful-select dropdown-primary mx-2">
-                <option value="" disabled selected>Show only</option>
-                <option value="1">All <span> (2000)</span></option>
-                <option value="2">Never opened <span> (200)</span></option>
-                <option value="3">Opened but unanswered <span> (1800)</span></option>
-                <option value="4">Answered <span> (200)</span></option>
-                <option value="5">Unsunscribed <span> (50)</span></option>
-            </select>
-            <!--/Blue select-->
-
-        </div>
-        <!--Grid column-->
-        <!--Grid column-->
-        <div class="col-lg-3 col-md-6">
-
-            <!--Blue select-->
-            <select class="mdb-select colorful-select dropdown-primary mx-2">
-                <option value="" disabled selected>Filter segments</option>
-                <option value="1">Contacts in no segments <span> (100)</span></option>
-                <option value="1">Segment 1 <span> (2000)</span></option>
-                <option value="2">Segment 2 <span> (1000)</span></option>
-                <option value="3">Segment 3 <span> (4000)</span></option>
-            </select>
-            <!--/Blue select-->
-
-        </div>*@
-        <!--Grid column-->
-        <!--Grid column-->
-        @*<div class="col-lg-3 col-md-6">
-
-            <form class="form-inline md-form mt-2 ml-2">
-                <input class="form-control my-0" type="text" placeholder="Search" style="max-width: 150px;">
-                <button class="btn btn-sm btn-primary ml-2 px-1"><i class="fa fa-search"></i>  </button>
-            </form>
-
-        </div>*@
-        <!--Grid column-->
-
-    </div>
-    <!--Grid row-->
-
-</div>
-<!--Top Table UI-->
-
-<div class="card card-cascade narrower">
-
-    <!--Card image-->
-    <div class="view view-cascade gradient-card-header blue-gradient narrower py-2 mx-4 mb-3 d-flex justify-content-between align-items-center">
-        
-        @*<div>
-            <button type="button" class="btn btn-outline-white btn-rounded btn-sm px-2"><i class="fa fa-th-large mt-0"></i></button>
-            <button type="button" class="btn btn-outline-white btn-rounded btn-sm px-2"><i class="fa fa-columns mt-0"></i></button>
-        </div>*@
-
-        <h1><a href="" class="white-text mx-3">商品列表</a></h1>
-        <div class="pull-right" id="toolbar">
-            <button id="create" class="btn btn-danger" disabled>
-                <i class="glyphicon glyphicon-remove"></i>@Html.ActionLink("Create New", "Create")
-            </button>
-        </div>
-        @*<div>
-            <button type="button" class="btn btn-outline-white btn-rounded btn-sm px-2"><i class="fa fa-pencil mt-0"></i></button>
-            <button type="button" class="btn btn-outline-white btn-rounded btn-sm px-2"><i class="fa fa-remove mt-0"></i></button>
-            <button type="button" class="btn btn-outline-white btn-rounded btn-sm px-2"><i class="fa fa-info-circle mt-0"></i></button>
-        </div>*@
-
-    </div>
-   
     <!--/Card image-->
 
-    <div class="px-4">
+    <div class="px-lg-4">
 
-        <div class="table-wrapper">
+        <div>
             <!--Table-->
             <table style="word-break:break-all">
 
                 <!--Table head-->
                 <thead>
                     <tr>
-                        <th>
+                        @*<th>
                             <input class="form-check-input" type="checkbox" id="checkbox">
-                            <label class="form-check-label" for="checkbox" class="mr-2 label-table">商品編號</label>
-                        </th>
+                                <label class="form-check-label" for="checkbox"></label>
+                        </th>*@
+                        <th class="th-lg"><a>商品編號<i class="fa fa-sort ml-1"></i></a></th>
                         <th class="th-lg"><a>商品名稱<i class="fa fa-sort ml-1"></i></a></th>
                         <th class="th-lg"><a href="">商品售價<i class="fa fa-sort ml-1"></i></a></th>
                         <td class="th-lg"><a href="">商品介紹<i class="fa fa-sort ml-1"></i></a></td>
                         <th class="th-lg"><a href=""><i class="fa fa-sort ml-1"></i></a></th>
                     </tr>
-        
-                <!--Table head-->
 
-                <!--Table body-->
+                    <!--Table head-->
+                    <!--Table body-->
                 <tbody>
                     @foreach (var item in Model)
                     {
 
-                    <tr>
-                       
-                        <th scope="row">
-                            <input class="form-check-input" type="checkbox" id="checkbox1">
-                            <label class="form-check-label" for="checkbox1" class="label-table">@Html.DisplayFor(modelItem => item.productId)</label>
-                        </th>
-                                    
-                        <th>
-                            @Html.DisplayFor(modelItem => item.title)
-                        </th>
-                        <th>
-                            @Html.DisplayFor(modelItem => item.price)
-                        </th>
-                        <td  class="alert-danger" width="50%">
-                            @Html.DisplayFor(modelItem => item.introduce)
-                        </td>
+                        <tr>
 
-                        <th>
-                            @Html.ActionLink("Edit", "Edit", new { id = item.productId }) |
-                            @Html.ActionLink("Details", "Details", new { id = item.productId }) |
-                            @Html.ActionLink("Delete", "Delete", new { id = item.productId })
-                        </th>
-                    </tr>
+                            @*<th>
+                                <input class="form-check-input" type="checkbox" id="checkbox1"/>
+                                    <label class="form-check-label" for="checkbox1" ></label>
+                            </th>*@
+                            <th>
+                                @Html.DisplayFor(modelItem => item.productId)
+                            </th>
+                            <th>
+                                @Html.DisplayFor(modelItem => item.title)
+                            </th>
+                            <th>
+                                @Html.DisplayFor(modelItem => item.price)
+                            </th>
+                            <td class="alert-danger" width="200">
+                                @Html.DisplayFor(modelItem => item.introduce)
+                            </td>
+
+                            <th>
+                                @Html.ActionLink("Edit", "Edit", new { id = item.productId }) |
+                                @Html.ActionLink("Delete", "Delete", new { id = item.productId })
+                            </th>
+                        </tr>
                     }
 
 
@@ -159,20 +86,20 @@
             <!--Table-->
         </div>
 
-        <hr class="my-0">
+
 
         <!--Bottom Table UI-->
-        <div class="d-flex justify-content-between">
+        <div>
 
             <!--Name-->
-            <select class="mdb-select colorful-select dropdown-primary mt-2 hidden-md-down">
+            <select class="pull-left">
                 <option value="" disabled>Rows number</option>
                 <option value="1" selected>10 rows</option>
                 <option value="2">25 rows</option>
                 <option value="3">50 rows</option>
                 <option value="4">100 rows</option>
             </select>
-
+            
             <!--Pagination -->
             <nav class="my-4">
                 <ul class="pagination pagination-circle pg-blue mb-0">
@@ -215,3 +142,5 @@
 
     </div>
 </div>
+
+           
