--- a/task03_0606/Views/Member/Register.cshtml
+++ b/task03_0606/Views/Member/Register.cshtml
@@ -106,7 +106,7 @@
                     <div class="form-row">
                         <div class="col-md">
                             <label for="inputLane">巷</label>
-                            <input class="form-control" id="lane" name="lane" value="@ViewBag.lane" value="@ViewBag.FirstName" type="text" placeholder="...">
+                            <input class="form-control" id="lane" name="lane" value="@ViewBag.lane" type="text" placeholder="...">
                         </div>
                         <div class="col-md">
                             <label for="inputAlley">弄</label>
