--- a/task03_0606/Views/Member/Member.cshtml
+++ b/task03_0606/Views/Member/Member.cshtml
@@ -24,6 +24,9 @@
             <li class="breadcrumb-item active">我的儀錶板</li>
         </ol>
         <!-- Icon Cards-->
+        <div>
+            <iframe width="760px" height="500px" src="https://sway.com/s/NFxKLsLX3U4ImT5E/embed" frameborder="0" marginheight="0" marginwidth="0" max-width="100%" sandbox="allow-forms allow-modals allow-orientation-lock allow-popups allow-same-origin allow-scripts" scrolling="no" style="border: none; max-width: 100%; max-height: 100vh" allowfullscreen mozallowfullscreen msallowfullscreen webkitallowfullscreen></iframe>
+        </div>
         <div class="row">
             <div class="col-xl-3 col-sm-6 mb-3">
                 <div class="card text-white bg-primary o-hidden h-100">
