--- a/task03_0606/Views/Order/Order_list_bussiness.cshtml
+++ b/task03_0606/Views/Order/Order_list_bussiness.cshtml
@@ -11,7 +11,7 @@
         <i class="fa fa-table"></i>未出餐清單<div class="pull-right text-muted">Updated yesterday at 11:59 PM</div>
     </div>
     <div class="card-body">
-        <div class="table-responsive">
+        <div class="table-responsive table-hover">
             <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                 <thead>
                     <tr>
@@ -79,6 +79,7 @@
                     <table class="table table-hover">
                         <thead>
                             <tr>
+                                <th>項次</th>
                                 <th>廠商</th>
                                 <th>產品編號</th>
                                 <th>產品名稱</th>
@@ -104,6 +105,7 @@
                         <thead id="detailSum">
                             <tr>
                                 <th>總計</th>
+                                <th> </th>
                                 <th> </th>
                                 <th> </th>
                                 <th>3</th>
@@ -158,12 +160,12 @@
                 var countSum = 0;
                 var amountSum = 0;
                 $.each(dataList, function (index, data) {
-                    $("#detailList").append('<tr>< td >' + index + '</td ><td>' + data.MemberID + '</td ><td>' + data.ProductID + '</td><td>' + data.ProductName + '</td><td>' + data.OrderCount + '</td><td>' + data.UnitPrice + '</td><td>' + data.OrderCount * data.UnitPrice + '</td><td>' + data.Note + '</td></tr >');
+                    $("#detailList").append('<tr><td>' + (index+1) + '</td><td>' + data.MemberID + '</td><td>' + data.ProductID + '</td><td>' + data.ProductName + '</td><td>' + data.OrderCount + '</td><td>' + data.UnitPrice + '</td><td>' + data.OrderCount * data.UnitPrice + '</td><td>' + data.Note + '</td></tr >');
                     countSum += data.OrderCount;
                     amountSum += data.OrderCount * data.UnitPrice;
                 });
                 $("#detailSum").empty();
-                $("#detailSum").append('<tr>< td >總計</td ><td></td ><td></td><td></td><td>' + countSum + '</td><td></td><td>' + amountSum + '</td><td></td></tr >');
+                $("#detailSum").append('<tr><td>總計</td><td></td ><td></td><td></td><td>' + countSum + '</td><td></td><td>' + amountSum + '</td><td></td><td></td></tr >');
             });
     });
 
