新增上傳功能

--- a/task03_0606/Views/Products/Create.cshtml
+++ b/task03_0606/Views/Products/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model task03_0606.Models.Class1
 
-   @{ ViewBag.Title = "Create";
+@{ ViewBag.Title = "Create";
 }
 
 <h2>新增產品</h2>
@@ -9,11 +9,11 @@
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
 
 
-    @Html.AntiForgeryToken()
+@Html.AntiForgeryToken()
 
 <form method="post" action="">
     <div class="form-group">
- 
+
         <div class="col-md-6">
             <label for="exampleInputName">產品編號</label>
             <input class="form-control" id="productsId" name="productsId" type="text" aria-describedby="productsHelp" placeholder="Enter productsId">
@@ -28,12 +28,12 @@
         </div>
         <div class="col-md-6">
             <label for="exampleInputEmail1">產品介紹</label>
-            <input class="form-control" id="introduce" name="introduce"type="text" placeholder="Enter introduce">
+            <input class="form-control" id="introduce" name="introduce" type="text" placeholder="Enter introduce">
         </div>
         <div class="form-group">
             @*<label for="exampleFormControlFile1">圖片預上傳，請點選下方按鈕</label>
-            <input id="imgPicker" type="file" class="form-control-file"  name="exampleFormControlFile1"/>
-            <img id="preview" width="200" height="200"/>*@
+                <input id="imgPicker" type="file" class="form-control-file"  name="exampleFormControlFile1"/>
+                <img id="preview" width="200" height="200"/>*@
             <input type="file" accept="image/*" onchange="showMyImage(this)" />
             <br />
             <img id="thumbnil" style="width:20%; margin-top:10px;" src="" alt="image" />
@@ -42,8 +42,23 @@
 
         <br />
         <button type="submit">確定</button>
-         </div>
+    </div>
 
-        </form>
+</form>
+<h2>Upload</h2>
+
+<hr />
+
+
+
+<form action="@Url.Action("Upload")" method="post" enctype="multipart/form-data">
+
+    <label for="file">Filename:</label>
+
+    <input type="file" name="file" id="file" />
+
+    <input type="submit" />
+
+</form>
 
 
